--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+___zip-require.js___
+This is a version of zip.js that uses AMD semantics
+
 zip.js is an open-source library (BSD license) for zipping and unzipping files.
 
 See here for more info:
